Mailfilter ChangeLog
-=-=-=-=-=-=-=-=-=-=

Sun May 11 17:11:43 CEST 2014 baueran

 Fix build problems due to bison not supporting
 YYPARSE_PARAM anylonger, documented e.g. here:

  https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=733380

Sat Mar  3 17:40:14 EST 2012 baueran

 Index: src/socket.cc
 Index: src/header.cc

  Ignore time stamps.

 Index: src/preferences.cc
 Index: src/preferences.hh

  Add preferences to ignore time stamps.

 Index: src/mailfilter.cc
 Index: src/mailfilter.hh

  Add Options.

 Index: configure.ac

  Change version number.

 Index: man/mailfilterrc.5
 Index: man/mailfilter.1
 Index: man/mailfilterex.5

  Update man pages.

Fri Mar 19 20:03:19 EST 2010 baueran

- src/header.cc: fix type incompatibility / compilation problem

Sun Jun  7 11:51:11 EST 2009 baueran

- src/header.hh: new custom exception, add_entry throws it
  when pop header is malformed
- src/rfc822.yy: pass on exception to main filtering code

Sun Jan 18 19:11:38 EST 2009 baueran

- src/apop.cc: fix strlen dependency by including cstring
- *: update email address and copyright information

Sat Sep 15 17:48:33 EST 2007 baueran

- src/socket.cc: update licensing to reflect SSL use
- README: update licensing to reflect SSL use
- TODO: remove

2007-03-12 07:25:35 -0700 (Mon, 12 Mar 2007)  baueran

- src/Makefile.am: make getopt conditional on GETOPT
- configure.ac: add GETOPT conditional to check getopt

2007-03-12 07:31:00 -0700 (Mon, 12 Mar 2007)  baueran

- man/mailfilter*: reflect recent date

2007-03-03 13:14:15 -0800 (Sat, 03 Mar 2007)  baueran 
                                                                                
- src/mailfilter.cc: add return_val to capture failed attempt to check          
  mailbox for spam
- src/socket.cc: syntax change

2007-01-22 14:00:26 -0800 (Mon, 22 Jan 2007)  baueran

- src/i18n.hh: remove                                                           
- src/apop.cc, src/preferences.cc, src/rcfile.yy,                               