@@ -235,7 +235,7 @@ them.
 .BR procmailex (5),
 .BR regex (7)
 .SH COPYRIGHT
-Copyright \(co 2000-2012 Andreas Bauer <baueran@gmail.com>
+Copyright \(co 2000-2014 Andreas Bauer <baueran@gmail.com>
 .PP
 This is free software; see the source for copying conditions.  There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
